gcc/testsuite/g++.dg/parse/asm1.C
//PR c++/30849

void foo()
{
  asm("" : 0);  // { dg-error "numeric constant|token" }
}
